--- a/html_source_file/index.html
+++ b/html_source_file/index.html
@@ -89,7 +89,7 @@
 
       <h2 id="about-me">About Me</h2>
 
-<p>I am a Ph.D. student at UMD</p>
+<p>I am a Ph.D. student at...</p>
 
 <h2 id="research-interests">Research Interests</h2>
 
@@ -107,7 +107,7 @@
   <li><strong>[Mar. 2019]</strong> Our paper about few-shot learning is accepted to CVPR 2019.</li>
 </ul>
 
-<h2 id="publications" style="margin: 2px 0px -15px;">Publications</h2>
+<h2 id="publications" style="margin: 2px 0px -15px;">Publications and  </h2>
 
 <div class="publications">
 <ol class="bibliography">
