--- a/html_source_file/index.html
+++ b/html_source_file/index.html
@@ -89,7 +89,7 @@
 
       <h2 id="about-me">About Me</h2>
 
-<p>I am a Ph.D. student at...</p>
+<p>I am a Ph.D. student at …</p>
 
 <h2 id="research-interests">Research Interests</h2>
 
@@ -107,17 +107,22 @@
   <li><strong>[Mar. 2019]</strong> Our paper about few-shot learning is accepted to CVPR 2019.</li>
 </ul>
 
-<h2 id="publications" style="margin: 2px 0px -15px;">Publications and  </h2>
+<h2 id="publications" style="margin: 2px 0px -15px;">Publications</h2>
 
 <div class="publications">
 <ol class="bibliography">
 
 
 
+<li>
 <div class="pub-row">
-  <div class="col-sm-9" style="position: padding-right 15px;padding-left: 0px;">
+  <div class="col-sm-3 abbr" style="position: relative;padding-right: 15px;padding-left: 15px;">
+    <img src="./assets/img/teaser_example_2.png" class="teaser img-fluid z-depth-1" style="width=100;height=40%" />
+            <abbr class="badge">MICCAI</abbr>
+  </div>
+  <div class="col-sm-9" style="position: relative;padding-right: 15px;padding-left: 20px;">
       <div class="title"><a href="https://arxiv.org/pdf/2306.00988.pdf">Continual Learning for Abdominal Multi-Organ and Tumor Segmentation</a></div>
-      <div class="author">Yixiao hello, Xinyi Li, Huimiao Chen, Alan Yuille, <strong>Yaoyao Liu*</strong>, Zongwei Zhou* (*Corresponding authors)</div>
+      <div class="author">Yixiao Zhang, Xinyi Li, Huimiao Chen, Alan Yuille, <strong>Yaoyao Liu*</strong>, Zongwei Zhou* (*Corresponding authors)</div>
       <div class="periodical"><em>International Conference on Medical Image Computing and Computer-Assisted Intervention <strong>(MICCAI)</strong>, 2023.</em>
       </div>
     <div class="links">
@@ -138,11 +143,19 @@
     </div>
   </div>
 </div>
+</li>
+
+<br />
 
 
 
+<li>
 <div class="pub-row">
-  <div class="col-sm-9" style="position: padding-right 0px;padding-left: 0px;">
+  <div class="col-sm-3 abbr" style="position: relative;padding-right: 15px;padding-left: 15px;">
+    <img src="./assets/img/teaser_example.png" class="teaser img-fluid z-depth-1" style="width=100;height=40%" />
+            <abbr class="badge">CVPR</abbr>
+  </div>
+  <div class="col-sm-9" style="position: relative;padding-right: 15px;padding-left: 20px;">
       <div class="title"><a href="https://arxiv.org/pdf/2002.10211.pdf">Mnemonics Training: Multi-Class Incremental Learning without Forgetting</a></div>
       <div class="author"><strong>Yaoyao Liu</strong>, Yuting Su, An-An Liu, Bernt Schiele, Qianru Sun</div>
       <div class="periodical"><em>IEEE/CVF Conference on Computer Vision and Pattern Recognition <strong>(CVPR)</strong>, 2020.</em>
@@ -167,6 +180,9 @@
     </div>
   </div>
 </div>
+</li>
+
+<br />
 
 
 
